changed nav bar to panel + implemented proper scrolling + fixed alignment errors on home header and addresses + implemented google analytic tracking in index.html

--- a/src/components/Shared/Footer/Footer.css
+++ b/src/components/Shared/Footer/Footer.css
@@ -61,6 +61,8 @@
 
 .footer-icon-container {
     display: flex;
+    justify-content: center;
+    text-align: center;
     /* align-items: center; */
     margin-bottom: 8px;
 }
@@ -68,6 +70,9 @@
 .footer-icon-description {
     display: flex;
     margin: 0px 5px;
+    /* justify-content: center; */
+    /* text-align: center; */
+    /* align-items: center; */
     /* align-items: start; */
 }
 
@@ -75,6 +80,7 @@
     /* margin-right: -12px; */
     /* margin-left: 12px; */
     /* height: 100%; */
+    margin-right: 4px;
 }
 
 .AN-map-icon {
